Playlist duration totals
(VLC Version 0.9.9a Grishenko (Intel), Mac OS 10.4.11, MacBook? Intel Core 2 Duo)
For as long as I can remember using it, VLC has been unable to show me the duration of whatever playlist I'm playing, as can been seen in the following image (http://img246.imageshack.us/img246/1152/vlcnotshowingplaylistdu.png).
Ideally, I'd like to know the time remaining in a playlist so I can use the information in an AppleScript? that shuts down this MacBook? when it's done. This would enable me to fall asleep to whatever I want to hear and conserve maximum energy. Thanks in advanced!