Qt: add playlist total duration

Ref #2744 #4252

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>